test/trivial/bradc/whilescope2.good
Error: Symbol 't' is not defined (whilescope2.chpl:2)
